--- a/packages/ui-library/src/css/clearfix.scss
+++ b/packages/ui-library/src/css/clearfix.scss
@@ -1,16 +1,17 @@
 
 @mixin clearfix {
-	*zoom: 1; // For IE 6/7 only
+    *zoom: 1; // For IE 6/7 only
 
-	&:before, &:after {
-		content: " "; /* 1 */
-		display: table; /* 2 */
-	}
-	&:after {
-		clear: both;
-	}
+    &:before,
+    &:after {
+        content: ' ';
+        display: table;
+    }
+    &:after {
+        clear: both;
+    }
 }
 
 .clearfix {
-	@include clearfix();
+    @include clearfix();
 }
