--- a/packages/ui-library/src/css/collapsible-section.scss
+++ b/packages/ui-library/src/css/collapsible-section.scss
@@ -1,51 +1,53 @@
 
 .collapsible-section {
-	$line-indent: 17px;
+    $line-indent: 17px;
 
-	border-top: 1px solid $color-rabbit-fur;
-	border-bottom: 1px solid $color-rabbit-fur;
-	padding: 25px 0 22px 0;
-	margin: 0 0 -1px $line-indent;
+    border-top: 1px solid $color-rabbit-fur;
+    border-bottom: 1px solid $color-rabbit-fur;
+    padding: 25px 0 22px;
+    margin: 0 0 -1px $line-indent;
 
-	.collapsible-section-title {
-		position: relative;
-		display: inline-block;
-		padding: 0 0 0 1px;
-		font-size: 15px;
-		text-transform: uppercase;
-		color: $color-slate;
-		line-height: 1em;
-		cursor: pointer;
-		font-family: $font-pn-regular;
-	}
-	.collapsible-section-content {
-		overflow: hidden;
-		max-height: 0;
-		@include transition((all 0.3s));
-	}
-	.collapsible-section-content-inner {
-		margin: 12px 0 0 25px;
-	}
-	&.open {
-		.collapsible-section-content {
-			overflow: visible;
-			max-height: 4000px;
-			@include animation(fade-in 0.2s);
-		}
-	}
+    .collapsible-section-title {
+        position: relative;
+        display: inline-block;
+        padding: 0 0 0 1px;
+        font-size: 15px;
+        text-transform: uppercase;
+        color: $color-slate;
+        line-height: 1em;
+        cursor: pointer;
+        font-family: $font-pn-regular;
+    }
+    .collapsible-section-content {
+        overflow: hidden;
+        max-height: 0;
 
-	// Override for default collapsible-link styles
-	.collapsible-link {
-		&:hover {
-			color: $color-slate;
-			text-decoration: none;
-			&.left:before {
-				color: $color-slate;
-			}
-		}
-		&.left:before {
-			left: -$line-indent;
-			color: $color-midnight;
-		}
-	}
+        @include transition((all 0.3s));
+    }
+    .collapsible-section-content-inner {
+        margin: 12px 0 0 25px;
+    }
+    &.open {
+        .collapsible-section-content {
+            overflow: visible;
+            max-height: 4000px;
+
+            @include animation(fade-in 0.2s);
+        }
+    }
+
+    // Override for default collapsible-link styles
+    .collapsible-link {
+        &:hover {
+            color: $color-slate;
+            text-decoration: none;
+            &.left:before {
+                color: $color-slate;
+            }
+        }
+        &.left:before {
+            left: -$line-indent;
+            color: $color-midnight;
+        }
+    }
 }
