--- a/packages/ui-library/src/css/details-tooltip.scss
+++ b/packages/ui-library/src/css/details-tooltip.scss
@@ -1,313 +1,316 @@
 
 .details-tooltip {
-	$edge-offset: 10px;
+    $edge-offset: 10px;
     $pointer-height: 14px;
 
-	$width: 360px;
-	$title-height: 50px;
+    $width: 360px;
+    $title-height: 50px;
 
-	$arrow-height: 15px;
-	$arrow-offset: 30px;
-	$arrow-width-offset: 6px;
+    $arrow-height: 15px;
+    $arrow-offset: 30px;
+    $arrow-width-offset: 6px;
 
-	$border-radius: 4px;
-	$box-shadow: 0 5px 15px 0 rgba(0, 0, 0, 0.2);
-	$text-shadow: 0 7px 6px rgba(0, 0, 0, 0.2);
+    $border-radius: 4px;
+    $box-shadow: 0 5px 15px 0 rgba(0, 0, 0, 0.2);
+    $text-shadow: 0 7px 6px rgba(0, 0, 0, 0.2);
 
-	$border: 1px solid $color-timberwolf;
+    $border: 1px solid $color-timberwolf;
 
-	position: relative;
-	display: inline-block;
+    position: relative;
+    display: inline-block;
 
-	&.show {
-		.details-content, &.details-content {
-			display: block;
-		}
-	}
-	&.alert {
-		.details-content {
-			.details-content-inner {
-				&:before {
-					color: $color-warning-icon-yellow;
-				}
-				&:after {
-					font-family: $icon-font;
-					content: '\21';
-
-					position: absolute;
-					top: 15px;
-					left: 0;
-					right: 0;
-					text-align: center;
-
-					font-size: 22px;
-					color: $color-warning-text;
-				}
-				.details-body {
-					border-top: $title-height solid $color-warning-icon-yellow;
-					@include border-radius($border-radius);
-				}
-			}
-			.details-close, .details-title {
-				display: none;
-			}
-			.title {
-				color: $color-warning-text;
-				text-transform: none;
-				text-align: center;
-				font-weight: 400;
-				font-size: 24px;
-				margin: 0;
-			}
-		}
-	}
-	&.confirm {
-        .details-content {
-			.details-content-inner {
-				&:before {
-					color: $color-elderly;
-				}
-				.details-title {
-					background-color: $color-elderly;
-					color: $color-rhino;
-				}
-			}
+    &.show {
+        .details-content,
+        &.details-content {
+            display: block;
         }
     }
-	.details-target {
-		display: inline-block;
-	}
-	.details-content {
-		display: none;
-		position: absolute;
-		z-index: 1001;
+    &.alert {
+        .details-content {
+            .details-content-inner {
+                &:before {
+                    color: $color-warning-icon-yellow;
+                }
+                &:after {
+                    content: '\21';
+                    position: absolute;
+                    top: 15px;
+                    left: 0;
+                    right: 0;
+                    font-family: $icon-font;
+                    font-size: 22px;
+                    text-align: center;
+                    color: $color-warning-text;
+                }
+                .details-body {
+                    border-top: $title-height solid $color-warning-icon-yellow;
 
-		top: 100%;
-		bottom: auto;
-		left: 50%;
-		right: auto;
+                    @include border-radius($border-radius);
+                }
+            }
+            .details-close,
+            .details-title {
+                display: none;
+            }
+            .title {
+                color: $color-warning-text;
+                text-transform: none;
+                text-align: center;
+                font-weight: 400;
+                font-size: 24px;
+                margin: 0;
+            }
+        }
+    }
+    &.confirm {
+        .details-content {
+            .details-content-inner {
+                &:before {
+                    color: $color-elderly;
+                }
+                .details-title {
+                    background-color: $color-elderly;
+                    color: $color-rhino;
+                }
+            }
+        }
+    }
+    .details-target {
+        display: inline-block;
+    }
+    .details-content {
+        display: none;
+        position: absolute;
+        z-index: 1001;
 
-		width: 0;
+        top: 100%;
+        bottom: auto;
+        left: 50%;
+        right: auto;
+
+        width: 0;
         padding: 0;
         margin: 0;
 
-		.details-content-inner {
-			position: relative;
-			box-sizing: border-box;
+        .details-content-inner {
+            position: relative;
+            box-sizing: border-box;
 
-			width: $width;
-			min-height: 80px;
-			background-color: $color-white;
-			font-size: 14px;
-			margin: $arrow-height 0 0 (-$arrow-offset - $arrow-width-offset);
+            width: $width;
+            min-height: 80px;
+            background-color: $color-white;
+            font-size: 14px;
+            margin: $arrow-height 0 0 (-$arrow-offset - $arrow-width-offset);
 
-			@include box-shadow($box-shadow);
-			@include border-radius($border-radius);
-			@include transition(0.3s ease);
+            @include box-shadow($box-shadow);
+            @include border-radius($border-radius);
+            @include transition(0.3s ease);
 
-			&:before {
-				content: '▲';
+            &:before {
+                content: '▲';
 
-				position: absolute;
-				top: -$arrow-height;
-				bottom: auto;
-				left: $arrow-offset;
-				right: auto;
+                position: absolute;
+                top: -$arrow-height;
+                bottom: auto;
+                left: $arrow-offset;
+                right: auto;
 
-				font-size: 20px;
-				line-height: 1em;
-				color: $color-walrus;
+                font-size: 20px;
+                line-height: 1em;
+                color: $color-walrus;
 
-				@include transform(scale(1.9,1));
-			}
-			.details-title {
-				min-height: $title-height;
-				box-sizing: border-box;
-				padding: 18px 10px 10px 10px;
+                @include transform(scale(1.9,1));
+            }
+            .details-title {
+                min-height: $title-height;
+                box-sizing: border-box;
+                padding: 18px 10px 10px;
 
-				background-color: $color-walrus;
-				color: $color-white;
+                background-color: $color-walrus;
+                color: $color-white;
 
-				text-align: center;
-				font-family: $font-pn-regular;
-				font-size: 17px;
-				line-height: 18px;
-				letter-spacing: 0;
-				text-transform: none;
+                text-align: center;
+                font-family: $font-pn-regular;
+                font-size: 17px;
+                line-height: 18px;
+                letter-spacing: 0;
+                text-transform: none;
 
-				@include border-radius($border-radius $border-radius 0 0);
+                @include border-radius($border-radius $border-radius 0 0);
 
-				a {
-					font-size: 16px;
-					text-decoration: uppercase;
-					position: absolute;
+                a {
+                    font-size: 16px;
+                    text-decoration: uppercase;
+                    position: absolute;
 
-				}
-			}
-			.sub-title {
-				font-size: 16px;
-				color: $color-rhino;
-				text-decoration: uppercase;
-				padding: 10px 0;
-			}
-			.details-body {
-				font-size: 15px;
-				padding: 25px;
-				color: $color-slate;
+                }
+            }
+            .sub-title {
+                font-size: 16px;
+                color: $color-rhino;
+                text-decoration: uppercase;
+                padding: 10px 0;
+            }
+            .details-body {
+                font-size: 15px;
+                padding: 25px;
+                color: $color-slate;
 
-				border-style: solid;
-				border-width: 0 1px 1px 1px;
-				border-color: $color-timberwolf;
-				border-radius: 0 0 $border-radius $border-radius;
-			}
-			.details {
-				padding: 10px 10px 0 10px;
-			}
-			.primary-action {
-				position: absolute;
-				bottom: 20px;
-				right: 20px;
-				margin: 0;
-			}
-			&.primary-button {
-				padding-bottom: 70px;
-			}
-			.loader {
-				position: relative;
-				display: inline-block;
-				margin: 10px 49%;
-				top: auto;
-				left: auto;
-			}
-			.buttons {
-				margin: 25px 0 0 0;
-				text-align: center;
+                border-style: solid;
+                border-width: 0 1px 1px;
+                border-color: $color-timberwolf;
+                border-radius: 0 0 $border-radius $border-radius;
+            }
+            .details {
+                padding: 10px 10px 0;
+            }
+            .primary-action {
+                position: absolute;
+                bottom: 20px;
+                right: 20px;
+                margin: 0;
+            }
+            &.primary-button {
+                padding-bottom: 70px;
+            }
+            .loader {
+                position: relative;
+                display: inline-block;
+                margin: 10px 49%;
+                top: auto;
+                left: auto;
+            }
+            .buttons {
+                margin: 25px 0 0;
+                text-align: center;
 
-				button, .button, input[type=button] {
-					margin: 0;
-					&.cancel {
-						margin-top: 0;
-						margin-right: 10px;
-					}
-				}
-				.cancel {
-					display: inline-block;
-					margin-top: 15px;
-					font-weight: normal;
-				}
-				.nevermind {
-					margin-right: 10px;
-				}
-				a {
-					color: $color-active-blue;
-					text-transform: none;
-					&.secondary {
-						color: $color-rhino;
-					}
-				}
-			}
-			.details-close {
-				position: absolute;
-				top: 18px;
-				right: 15px;
-				color: transparent;
-				z-index: 2;
-				line-height: 1em;
-				cursor: pointer;
+                button,
+                .button,
+                input[type=button] {
+                    margin: 0;
+                    &.cancel {
+                        margin-top: 0;
+                        margin-right: 10px;
+                    }
+                }
+                .cancel {
+                    display: inline-block;
+                    margin-top: 15px;
+                    font-weight: normal;
+                }
+                .nevermind {
+                    margin-right: 10px;
+                }
+                a {
+                    color: $color-active-blue;
+                    text-transform: none;
+                    &.secondary {
+                        color: $color-rhino;
+                    }
+                }
+            }
+            .details-close {
+                position: absolute;
+                top: 18px;
+                right: 15px;
+                color: transparent;
+                z-index: 2;
+                line-height: 1em;
+                cursor: pointer;
 
-				&:after {
-					font-family: 'iconfont';
-					content: '\78';
-					text-transform: none;
-					font-size: 18px;
-					color: rgba($color-white, 0.3);
-				}
-			}
-			.input-text {
-				input {
-					width: 304px;
-				}
-			}
+                &:after {
+                    font-family: 'iconfont';
+                    content: '\78';
+                    text-transform: none;
+                    font-size: 18px;
+                    color: rgba($color-white, 0.3);
+                }
+            }
+            .input-text {
+                input {
+                    width: 304px;
+                }
+            }
 
-		}
-	}
-	&.top {
-		.details-content {
-			top: auto;
-			bottom: 100%;
+        }
+    }
+    &.top {
+        .details-content {
+            top: auto;
+            bottom: 100%;
 
-			.details-content-inner {
-				margin-top: 0;
-				margin-bottom: $arrow-height;
+            .details-content-inner {
+                margin-top: 0;
+                margin-bottom: $arrow-height;
 
-				&:before {
-					content: '▼';
-					top: auto;
-					bottom: -$arrow-height + 2;
-					color: $color-white;
+                &:before {
+                    content: '▼';
+                    top: auto;
+                    bottom: -$arrow-height + 2;
+                    color: $color-white;
 
-					text-shadow: $text-shadow;
-				}
-				.confirm-buttons {
-					margin: 20px auto;
-					text-align: center;
-				}
-			}
+                    text-shadow: $text-shadow;
+                }
+                .confirm-buttons {
+                    margin: 20px auto;
+                    text-align: center;
+                }
+            }
 
-		}
-	}
-	&.center {
-		.details-content {
-			.details-content-inner {
-				margin-left: -(round($width/2));
+        }
+    }
+    &.center {
+        .details-content {
+            .details-content-inner {
+                margin-left: -(round($width/2));
 
-				&:before {
-					left: (round($width/2) - 7);
-					right: auto;
-				}
-			}
-		}
-	}
-	&.left {
-		.details-content {
-			.details-content-inner {
-				margin-left: -($width - $arrow-offset - $arrow-width-offset);
+                &:before {
+                    left: (round($width/2) - 7);
+                    right: auto;
+                }
+            }
+        }
+    }
+    &.left {
+        .details-content {
+            .details-content-inner {
+                margin-left: -($width - $arrow-offset - $arrow-width-offset);
 
-				&:before {
-					right: $arrow-offset;
-					left: auto;
-				}
-			}
-		}
-	}
-	&.text-link {
-		.details-target {
-			display: inline-block;
-		}
-		.details-content {
-	    	margin-bottom: 20px;
-		}
-	}
-	&.input-selection-list-tooltip {
-		.details-content {
-			.details-content-inner {
-				width: 200px;
-				border-color: $color-timberwolf;
+                &:before {
+                    right: $arrow-offset;
+                    left: auto;
+                }
+            }
+        }
+    }
+    &.text-link {
+        .details-target {
+            display: inline-block;
+        }
+        .details-content {
+            margin-bottom: 20px;
+        }
+    }
+    &.input-selection-list-tooltip {
+        .details-content {
+            .details-content-inner {
+                width: 200px;
+                border-color: $color-timberwolf;
 
-				.details-body {
-					padding: 0;
-				}
+                .details-body {
+                    padding: 0;
+                }
 
-				&:before {
-					color: $color-white;
-					text-shadow: 0px -1px 0px $color-timberwolf;
-				}
-				.input-selection-list {
-					border: none;
-				}
-			}
-		}
-	}
+                &:before {
+                    color: $color-white;
+                    text-shadow: 0 -1px 0 $color-timberwolf;
+                }
+                .input-selection-list {
+                    border: none;
+                }
+            }
+        }
+    }
 }
 
 
@@ -315,50 +318,52 @@
 // DEPRECATED OR SITE-SPECIFIC STYLES ----------------------------------------------------------------------------------
 
 .details-tooltip {
-	&.alert {
-		.details-content-inner {
-			p {
-				margin-bottom: 0.5em;
-			}
-			.buttons, div {
-				padding: 20px;
-				margin-top: 0;
-				.input-row {
-					padding-top: 0;
-					margin-bottom: 0;
-				}
-				.alone {
-					margin-right: 0;
-				}
-			}
-		}
-	}
-	&.confirm {
+    &.alert {
+        .details-content-inner {
+            p {
+                margin-bottom: 0.5em;
+            }
+            .buttons,
+            div {
+                padding: 20px;
+                margin-top: 0;
+                .input-row {
+                    padding-top: 0;
+                    margin-bottom: 0;
+                }
+                .alone {
+                    margin-right: 0;
+                }
+            }
+        }
+    }
+    &.confirm {
         .details-content {
-			.details-content-inner {
-				&:before {
-					color: $color-elderly;
-				}
-				.details-title {
-					background-color: $color-elderly;
-					color: $color-rhino;
-				}
-				p {
-					text-align: center;
-					margin-bottom: 0.5em;
-				}
-				.buttons, div {
-					padding: 20px;
-					margin-top: 0;
-					.input-row {
-						padding-top: 0;
-						margin-bottom: 0;
-					}
-					.alone {
-						margin-right: 0;
-					}
-				}
-			}
+            .details-content-inner {
+                &:before {
+                    color: $color-elderly;
+                }
+                .details-title {
+                    background-color: $color-elderly;
+                    color: $color-rhino;
+                }
+                p {
+                    text-align: center;
+                    margin-bottom: 0.5em;
+                }
+                .buttons,
+                div {
+                    padding: 20px;
+                    margin-top: 0;
+                    .input-row {
+                        padding-top: 0;
+                        margin-bottom: 0;
+                    }
+                    .alone {
+                        margin-right: 0;
+                    }
+                }
+            }
         }
     }
 }
