--- a/packages/ui-library/src/css/loader.scss
+++ b/packages/ui-library/src/css/loader.scss
@@ -1,156 +1,201 @@
 
 @-webkit-keyframes rotation {
-	0% { @include transform(rotate(0deg)); }
-	100% { @include transform(rotate(720deg)); }
+    0% {
+        @include transform(rotate(0deg));
+    }
+    100% {
+        @include transform(rotate(720deg));
+    }
 }
+
 @-moz-keyframes rotation {
-	0% { @include transform(rotate(0deg)); }
-	100% { @include transform(rotate(720deg)); }
+    0% {
+        @include transform(rotate(0deg));
+    }
+    100% {
+        @include transform(rotate(720deg));
+    }
 }
+
 @-o-keyframes rotation {
-	0% { @include transform(rotate(0deg)); }
-	100% { @include transform(rotate(720deg)); }
+    0% {
+        @include transform(rotate(0deg));
+    }
+    100% {
+        @include transform(rotate(720deg));
+    }
 }
+
 @keyframes rotation {
-	0% { @include transform(rotate(0deg)); }
-	100% { @include transform(rotate(720deg)); }
+    0% {
+        @include transform(rotate(0deg));
+    }
+    100% {
+        @include transform(rotate(720deg));
+    }
 }
 
 @mixin loaderCss($loader-size) {
-	width: $loader-size;
-	height: $loader-size;
-	display: inline-block;
-	border-width: 3px;
-	border-style: solid;
+    width: $loader-size;
+    height: $loader-size;
+    display: inline-block;
+    border-width: 3px;
+    border-style: solid;
 
-	@include border-radius($loader-size);
-	@include animation (rotation 1.1s infinite linear);
+    @include border-radius($loader-size);
+    @include animation (rotation 1.1s infinite linear);
 }
 
 .spinner {
-	$loader-size: 15px;
+    $loader-size: 15px;
 
-	position: relative;
-	top: 50%;
-	color: transparent;
-	font-size: 1px;
-	border-color: $color-rhino rgba($color-rhino, 0.4) rgba($color-rhino, 0.4) rgba($color-rhino, 0.4);
-	vertical-align: bottom;
+    position: relative;
+    top: 50%;
+    color: transparent;
+    font-size: 1px;
+    border-color: $color-rhino rgba($color-rhino, 0.4) rgba($color-rhino, 0.4) rgba($color-rhino, 0.4);
+    vertical-align: bottom;
 
-	@include loaderCss($loader-size);
+    @include loaderCss($loader-size);
 
-	&.large {
-		$loader-size: 30px;
+    &.large {
+        $loader-size: 30px;
 
-		border-width: 4px;
-		width: $loader-size;
-		height: $loader-size;
+        border-width: 4px;
+        width: $loader-size;
+        height: $loader-size;
 
-		@include border-radius($loader-size);
-	}
-	&.ie9 {
-		border: none;
-		background-image: url("#{$img-path}spinner.gif");
-		background-repeat: no-repeat;
-		background-position: 50%;
-		background-size: 21px;
-		height: 21px;
-		width: 21px;
-		&.large {
-			background-size: 38px;
-			height: 38px;
-			width: 38px;
-		}
-	}
+        @include border-radius($loader-size);
+    }
+    &.ie9 {
+        border: none;
+        background-image: url('#{$img-path}spinner.gif');
+        background-repeat: no-repeat;
+        background-position: 50%;
+        background-size: 21px;
+        height: 21px;
+        width: 21px;
+
+        &.large {
+            background-size: 38px;
+            height: 38px;
+            width: 38px;
+        }
+    }
 }
+
 button.spinner {
-	$loader-size: 9px;
+    $loader-size: 9px;
 
-	&:before {
-		content: '';
-		top: 12px;
-		left: 12px;
-		position: absolute;
-		border-color: rgba($color-white, 0.9) rgba($color-white, 0.6) rgba($color-white, 0.7) rgba($color-white, 0.8);
+    &:before {
+        content: '';
+        top: 12px;
+        left: 12px;
+        position: absolute;
+        border-color: rgba($color-white, 0.9) rgba($color-white, 0.6) rgba($color-white, 0.7) rgba($color-white, 0.8);
 
-		@include loaderCss($loader-size);
-	}
+        @include loaderCss($loader-size);
+    }
 
-	&.download {
-		&:before {
-			left: 15px;
-		}
-	}
+    &.download {
+        &:before {
+            left: 15px;
+        }
+    }
 }
 
 
 .icon-ellipsis {
-	$color: rgba($color-walrus, 0.6);
-	position: relative;
-	display: inline-block;
-	color: $color-white;
-	$size: 7px;
-	$spacing: 7px;
-	$timing: 1.0s ease-out infinite;
+    $color: rgba($color-walrus, 0.6);
+    position: relative;
+    display: inline-block;
+    color: $color-white;
+    $size: 7px;
+    $spacing: 7px;
+    $timing: 1s ease-out infinite;
 
-	> span, &:before, &:after {
-		content: '';
-		display: block;
-		position: absolute;
-		height: $size;
-		width: $size;
-		@include border-radius(ceil($size/2));
-		background-color: $color;
-		opacity: 0;
-	}
+    > span,
+    &:before,
+    &:after {
+        content: '';
+        display: block;
+        position: absolute;
+        height: $size;
+        width: $size;
+        background-color: $color;
+        opacity: 0;
 
-		span {
-			left: 0;
-			@include animation(pulse-1 $timing);
-		}
-		&:before {
-			left: $size + $spacing;
-			@include animation(pulse-2 $timing);
-		}
-		&:after {
-			left: 2*($size + $spacing);
-			@include animation(pulse-3 $timing);
-		}
+        @include border-radius(ceil($size/2));
+    }
 
-	@include keyframes(pulse-1) {
-		0% { opacity: 0; }
-		50% { opacity: 1;  }
-	}
-	@include keyframes(pulse-2) {
-		25% { opacity: 0; }
-		75% { opacity: 1; }
-	}
-	@include keyframes(pulse-3) {
-		50% { opacity: 0; }
-		100% { opacity: 1; }
-	}
-	&.ie9 {
-		height: 7px;
-		width: 36px;
-		content: ('');
-		background-image: url("#{$img-path}ellipsis-dark.gif");
-		background-repeat: no-repeat;
-		background-position: 50%;
-		background-size: 36px 7px;
-	}
+    span {
+        left: 0;
+
+        @include animation(pulse-1 $timing);
+    }
+    &:before {
+        left: $size + $spacing;
+
+        @include animation(pulse-2 $timing);
+    }
+    &:after {
+        left: 2*($size + $spacing);
+
+        @include animation(pulse-3 $timing);
+    }
+
+    @include keyframes(pulse-1) {
+        0% {
+            opacity: 0;
+        }
+        50% {
+            opacity: 1;
+        }
+    }
+
+    @include keyframes(pulse-2) {
+        25% {
+            opacity: 0;
+        }
+        75% {
+            opacity: 1;
+        }
+    }
+
+    @include keyframes(pulse-3) {
+        50% {
+            opacity: 0;
+        }
+        100% {
+            opacity: 1;
+        }
+    }
+    &.ie9 {
+        height: 7px;
+        width: 36px;
+        content: ('');
+        background-image: url('#{$img-path}ellipsis-dark.gif');
+        background-repeat: no-repeat;
+        background-position: 50%;
+        background-size: 36px 7px;
+    }
 }
 
 .ellipsis-loader-button {
-	&.primary, &.success, &.cancel {
-		.icon-ellipsis {
-			$color: rgba($color-white, 0.6);
-			> span, &:before, &:after {
-				background-color: $color;
-			}
-			&.ie9 {
-				background-image: url("#{$img-path}ellipsis.gif");
-				opacity: 0.6;
-			}
-		}
-	}
+    &.primary,
+    &.success,
+    &.cancel {
+        .icon-ellipsis {
+            $color: rgba($color-white, 0.6);
+            > span,
+            &:before,
+            &:after {
+                background-color: $color;
+            }
+            &.ie9 {
+                background-image: url('#{$img-path}ellipsis.gif');
+                opacity: 0.6;
+            }
+        }
+    }
 }
