--- a/packages/ui-library/src/css/modals.scss
+++ b/packages/ui-library/src/css/modals.scss
@@ -1,260 +1,266 @@
 .modal {
-	$modal-radius: 4px;
-	$default-top: 57px;
-	$min-bottom: 40px;
-	$header-height: 46px;
-	$max-modal-width: 960px;
+    $modal-radius: 4px;
+    $default-top: 57px;
+    $min-bottom: 40px;
+    $header-height: 46px;
+    $max-modal-width: 960px;
 
-	position: fixed;
-	left: 10px;
-	right: 10px;
-	top: $default-top;
-	bottom: 0;
-	z-index: 1001;
+    position: fixed;
+    left: 10px;
+    right: 10px;
+    top: $default-top;
+    bottom: 0;
+    z-index: 1001;
 
-	&.show {
-		.modal-content {
-			display: inline-block;
-		}
-		.modal-bg{
-			background: $color-black;
-			position: fixed;
-			top: 0;
-			bottom: 0;
-			left: 0;
-			right: 0;
-			z-index: 1;
-			@include opacity(0.4);
-		}
-	}
-	&.full-width {
-		.modal-content {
-			width: 100%;
-		}
-	}
-	.modal-content {
-		display: none;
-		position: relative;
-		z-index: 1;
-		top: 0;
-		left: 50%;
-		transform: translateX(-50%);
-		height: 100%;
-		max-width: $max-modal-width;
-		min-width: 360px;
-		font-family: $font-pn-regular;
-	}
-	.modal-header {
-		position: relative;
-		padding: 0 25px;
-		box-sizing: border-box;
-		background-color: $color-walrus;
-		color: $color-white;
-		font-size: 21px;
-		line-height: $header-height;
-		min-height: $header-height;
-		font-weight: 300;
-		@include border-radius($modal-radius $modal-radius 0 0);
+    &.show {
+        .modal-content {
+            display: inline-block;
+        }
+        .modal-bg {
+            background: $color-black;
+            position: fixed;
+            top: 0;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            z-index: 1;
 
-		h2 {
-			vertical-align: middle;
-			margin: 0 auto;
-			color: $color-white;
-			padding: 18px 0 0 18px;
-		}
-		.close-modal {
-			position: absolute;
-			top: 9px;
-			right: 15px;
-			line-height: 1em;
-			color: transparent;
+            @include opacity(0.4);
+        }
+    }
+    &.full-width {
+        .modal-content {
+            width: 100%;
+        }
+    }
+    .modal-content {
+        display: none;
+        position: relative;
+        z-index: 1;
+        top: 0;
+        left: 50%;
+        transform: translateX(-50%);
+        height: 100%;
+        max-width: $max-modal-width;
+        min-width: 360px;
+        font-family: $font-pn-regular;
+    }
+    .modal-header {
+        position: relative;
+        padding: 0 25px;
+        box-sizing: border-box;
+        background-color: $color-walrus;
+        color: $color-white;
+        font-size: 21px;
+        line-height: $header-height;
+        min-height: $header-height;
+        font-weight: 300;
 
-			&:after {
-				color: $color-rhino;
-				font-size: 18px;
-				content: '\78';
-				font-family: 'iconfont';
-			}
-		}
-	}
-	.modal-body {
-		position: relative;
-		padding: 30px;
-		font-weight: normal;
-		box-sizing: border-box;
-		background-color: $color-elderly;
-		overflow-x: visible;
-		overflow-y: auto;
-		max-height: calc(100% - #{2*$min-bottom});
-		@include border-radius(0 0 $modal-radius $modal-radius);
+        @include border-radius($modal-radius $modal-radius 0 0);
 
-		h2 {
-			color: $color-midnight;
-			padding: 20px 0 5px 48px;
-			margin-bottom: 0;
-		}
-		p {
-			margin-bottom: 1.0em;
-			color: $color-elephant;
-			font-size: 14px;
+        h2 {
+            vertical-align: middle;
+            margin: 0 auto;
+            color: $color-white;
+            padding: 18px 0 0 18px;
+        }
+        .close-modal {
+            position: absolute;
+            top: 9px;
+            right: 15px;
+            line-height: 1em;
+            color: transparent;
 
-			a {
-				display: inline-block;
-				margin: 0 5px;
-			}
-		}
-		.page-controls-primary {
-			position: relative;
-			left: auto;
-			right: auto;
-			bottom: auto;
-			background: transparent;
-			padding: 0;
-			border: none;
-		}
-	}
-	&.maximize {
-		&.show {
-			.modal-content {
-				bottom: $min-bottom;
-			}
-			.modal-body {
-				bottom: 0;
-				min-height: inherit;
-				height: calc(100% - #{$min-bottom});
-				width: $max-modal-width;
-			}
-		}
-	}
-	&.dialog {
-		$modal-width: 350px;
+            &:after {
+                color: $color-rhino;
+                font-size: 18px;
+                content: '\78';
+                font-family: 'iconfont';
+            }
+        }
+    }
+    .modal-body {
+        position: relative;
+        padding: 30px;
+        font-weight: normal;
+        box-sizing: border-box;
+        background-color: $color-elderly;
+        overflow-x: visible;
+        overflow-y: auto;
+        max-height: calc(100% - #{2 * $min-bottom});
 
-		.modal-content {
-			width: $modal-width;
-		}
-		.modal-title {
-			font-size: 20px;
-			margin: 0 0 15px 0;
-		}
-		.modal-header {
-			display: none;
-		}
-		.modal-body {
-			border-width: 0 1px 1px 1px;
-			text-align: left;
-			font-size: 18px;
-			@include border-radius($modal-radius);
+        @include border-radius(0 0 $modal-radius $modal-radius);
 
-			max-height: calc(100% - #{$min-bottom});
+        h2 {
+            color: $color-midnight;
+            padding: 20px 0 5px 48px;
+            margin-bottom: 0;
+        }
+        p {
+            margin-bottom: 1em;
+            color: $color-elephant;
+            font-size: 14px;
 
-			.buttons {
-				margin: 30px 0 0 0;
-				text-align: center;
+            a {
+                display: inline-block;
+                margin: 0 5px;
+            }
+        }
+        .page-controls-primary {
+            position: relative;
+            left: auto;
+            right: auto;
+            bottom: auto;
+            background: transparent;
+            padding: 0;
+            border: none;
+        }
+    }
+    &.maximize {
+        &.show {
+            .modal-content {
+                bottom: $min-bottom;
+            }
+            .modal-body {
+                bottom: 0;
+                min-height: inherit;
+                height: calc(100% - #{$min-bottom});
+                width: $max-modal-width;
+            }
+        }
+    }
+    &.dialog {
+        $modal-width: 350px;
 
-				a {
-					display: block;
-					margin: 20px 0 0 0;
-					font-size: 15px;
-					text-transform: uppercase;
-				}
-			}
-		}
-	}
-	&.alert {
-		$modal-width: 360px;
+        .modal-content {
+            width: $modal-width;
+        }
+        .modal-title {
+            font-size: 20px;
+            margin: 0 0 15px;
+        }
+        .modal-header {
+            display: none;
+        }
+        .modal-body {
+            border-width: 0 1px 1px;
+            text-align: left;
+            font-size: 18px;
+            max-height: calc(100% - #{$min-bottom});
 
-		.modal-header, .modal-body {
-			border-width: 1px 1px 0 1px;
-			border-style: solid;
-			border-color:  $color-warning-icon-yellow;
-		}
-		.modal-header {
-			background: $color-warning-icon-yellow;
-			color: rgba($color-black, 0.5);
-			font-size: 17px;
-			text-align: center;
-			line-height: 1.2em;
-			padding: 20px;
-			text-transform: none;
+            @include border-radius($modal-radius);
 
-			&:after {
-				content: none;
-			}
-			&:before {
-				font-family: $icon-font;
-				content: '\21';
-				position: absolute;
-				top: 10px;
-				left: 0;
-				right: 0;
-				text-align: center;
-				font-size: 22px;
-				z-index: 1;
-				color: $color-warning-text;
-			}
-			.close-modal {
-				display: none;
-			}
-		}
-		.modal-body {
-			border: none;
-			text-align: left;
-			@include border-radius(0 0 $modal-radius $modal-radius);
-			background-color: $color-white;
-			position: relative;
-			top: 0;
+            .buttons {
+                margin: 30px 0 0;
+                text-align: center;
 
-			.title {
-				color: $color-warning-text;
-				text-align: center;
-				font-weight: 400;
-				font-size: 24px;
-				margin: 0;
-				padding-bottom: 20px;
-			}
+                a {
+                    display: block;
+                    margin: 20px 0 0;
+                    font-size: 15px;
+                    text-transform: uppercase;
+                }
+            }
+        }
+    }
+    &.alert {
+        $modal-width: 360px;
 
-			.buttons {
-				margin: 25px 0 0 0;
-				text-align: center;
+        .modal-header,
+        .modal-body {
+            border-width: 1px 1px 0;
+            border-style: solid;
+            border-color: $color-warning-icon-yellow;
+        }
+        .modal-header {
+            background: $color-warning-icon-yellow;
+            color: rgba($color-black, 0.5);
+            font-size: 17px;
+            text-align: center;
+            line-height: 1.2em;
+            padding: 20px;
+            text-transform: none;
 
-				a.cancel {
-					display: inline-block;
-					margin: 15px 0 0 0;
-				}
-			}
-		}
-	}
-	.page-messages {
-		position: absolute;
-		top: 0;
-		left: 0;
-		right: 0;
+            &:after {
+                content: none;
+            }
+            &:before {
+                font-family: $icon-font;
+                content: '\21';
+                position: absolute;
+                top: 10px;
+                left: 0;
+                right: 0;
+                text-align: center;
+                font-size: 22px;
+                z-index: 1;
+                color: $color-warning-text;
+            }
+            .close-modal {
+                display: none;
+            }
+        }
+        .modal-body {
+            border: none;
+            text-align: left;
+            background-color: $color-white;
+            position: relative;
+            top: 0;
 
-		.close {
-			right: 15px;
+            @include border-radius(0 0 $modal-radius $modal-radius);
 
-			&:after {
-				font-size: 18px;
+            .title {
+                color: $color-warning-text;
+                text-align: center;
+                font-weight: 400;
+                font-size: 24px;
+                margin: 0;
+                padding-bottom: 20px;
+            }
 
-			}
-		}
-		.message {
-			padding-left: 30px;
-		}
-	}
-	.page-controls-primary {
-		@include transition(all 0.1s);
+            .buttons {
+                margin: 25px 0 0;
+                text-align: center;
 
-		&.hidden {
-			@include transform(translateY(0));
-			@include opacity(0);
-		}
-	}
+                a.cancel {
+                    display: inline-block;
+                    margin: 15px 0 0;
+                }
+            }
+        }
+    }
+    .page-messages {
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+
+        .close {
+            right: 15px;
+
+            &:after {
+                font-size: 18px;
+
+            }
+        }
+        .message {
+            padding-left: 30px;
+        }
+    }
+    .page-controls-primary {
+        @include transition(all 0.1s);
+
+        &.hidden {
+            @include transform(translateY(0));
+            @include opacity(0);
+        }
+    }
 }
+
 .edit-form {
-	.modal {
-		.modal-body {
-			background: $color-white;
-		}
-	}
+    .modal {
+        .modal-body {
+            background: $color-white;
+        }
+    }
 }
