--- a/packages/ui-library/src/css/row-selector.scss
+++ b/packages/ui-library/src/css/row-selector.scss
@@ -1,101 +1,102 @@
 .row-selector {
-	height: 450px;
-	.column-title {
-		font-size: 15px;
-		color: $color-slate;
-		padding: 0 0 10px 0;
-		text-transform: uppercase;
-	}
-	.input-search {
-		margin: 0 0 30px 0;
-	}
-	.rows-available, .rows-added {
-		display: inline-block;
-		vertical-align: top;
-		width: calc(50% - 20px);
-		float: left;
-		box-sizing: border-box;
-	}
-	.rows-available {
-		margin: 0 20px 0 0;
-	}
-	.rows-added {
-		.items {
-			position: relative;
-		}
-	}
-	.items {
-		max-height: 400px;
-		overflow: auto;
-	}
-	.no-items {
-		padding: 14px 0;
-		margin-bottom: 4px;
-		text-align: center;
-		font-size: 14px;
-		border: 1px dotted $color-rabbit-fur;
+    height: 450px;
+    .column-title {
+        font-size: 15px;
+        color: $color-slate;
+        padding: 0 0 10px;
+        text-transform: uppercase;
+    }
+    .input-search {
+        margin: 0 0 30px;
+    }
+    .rows-available,
+    .rows-added {
+        display: inline-block;
+        width: calc(50% - 20px);
+        float: left;
+        box-sizing: border-box;
+    }
+    .rows-available {
+        margin: 0 20px 0 0;
+    }
+    .rows-added {
+        .items {
+            position: relative;
+        }
+    }
+    .items {
+        max-height: 400px;
+        overflow: auto;
+    }
+    .no-items {
+        padding: 14px 0;
+        margin-bottom: 4px;
+        text-align: center;
+        font-size: 14px;
+        border: 1px dotted $color-rabbit-fur;
         left: 0;
-		right: 0;
+        right: 0;
         z-index: 10;
         background-color: $color-white;
 
-		&.preview {
-			border: 1px dotted $color-active-blue;
-		}
-	}
-	.item {
-		position: relative;
-		background-color: $color-white;
-		border-top: 1px solid $color-rabbit-fur;
-		color: $color-text;
-		margin: 0;
-		padding: 15px 5px;
+        &.preview {
+            border: 1px dotted $color-active-blue;
+        }
+    }
+    .item {
+        position: relative;
+        background-color: $color-white;
+        border-top: 1px solid $color-rabbit-fur;
+        color: $color-text;
+        margin: 0;
+        padding: 15px 5px;
 
-		@include box-sizing(border-box);
-		@include grab-cursor;
+        @include box-sizing(border-box);
+        @include grab-cursor;
 
-		.icon-grip {
-			display: inline-block;
-			margin-right: 20px;
-			vertical-align: middle;
-			&:before {
-				font-size: 16px;
-				color: $color-stratus;
-			}
-		}
-		.name {
-			font-size: 18px;
-			color: $color-midnight;
-		}
-		a.button {
-			position: absolute;
-			right: 0;
-			top: 8px;
-		}
-		button {
-			position: absolute;
-			right: 0;
-			top: 10px;
-			&.inline {
-				&.plus, &.remove {
-					padding: 0;
-					right: 5px;
-					margin-right: 0;
-					&:hover {
-						border-color: $color-rhino;
-						&:before {
-							color: $color-active-blue;
-						}
-					}
-				}
-			}
-		}
-		&.preview {
-			border: 1px dotted $color-active-blue;
-		}
-		&.item-disabled {
-			background: $color-dolphin;
-			cursor: default;
-		}
-	}
+        .icon-grip {
+            display: inline-block;
+            margin-right: 20px;
+            vertical-align: middle;
+            &:before {
+                font-size: 16px;
+                color: $color-stratus;
+            }
+        }
+        .name {
+            font-size: 18px;
+            color: $color-midnight;
+        }
+        a.button {
+            position: absolute;
+            right: 0;
+            top: 8px;
+        }
+        button {
+            position: absolute;
+            right: 0;
+            top: 10px;
+            &.inline {
+                &.plus,
+                &.remove {
+                    padding: 0;
+                    right: 5px;
+                    margin-right: 0;
+                    &:hover {
+                        border-color: $color-rhino;
+                        &:before {
+                            color: $color-active-blue;
+                        }
+                    }
+                }
+            }
+        }
+        &.preview {
+            border: 1px dotted $color-active-blue;
+        }
+        &.item-disabled {
+            background: $color-dolphin;
+            cursor: default;
+        }
+    }
 }
