--- a/packages/ui-library/src/css/status-indicators.scss
+++ b/packages/ui-library/src/css/status-indicators.scss
@@ -13,7 +13,8 @@
     &.good {
         background-color: $color-success;
     }
-    &.error, &.failure {
+    &.error,
+    &.failure {
         background-color: $color-critical-red;
     }
     &.warning {
@@ -21,6 +22,7 @@
         border: $border solid $color-warning-yellow;
         height: $size;
         width: $size;
+
         @include border-radius(ceil(($size + $border)/2));
     }
 }
